@@ -2,7 +2,6 @@ package kr.co.teacherforboss.service.examService;
 
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import kr.co.teacherforboss.apiPayload.code.status.ErrorStatus;
 import kr.co.teacherforboss.apiPayload.exception.handler.ExamHandler;
 import kr.co.teacherforboss.converter.ExamConverter;
@@ -60,13 +59,14 @@ public class ExamCommandServiceImpl implements ExamCommandService {
                     QuestionChoice questionChoice = questionChoiceRepository.findByIdAndStatus(q.getQuestionChoiceId(), Status.ACTIVE)
                             .orElseThrow(() -> new ExamHandler(ErrorStatus.QUESTION_CHOICE_NOT_FOUND));
 
-                    if (question.getAnswer().equals(questionChoice.getId()))
+                    if (question.getAnswer().equals(questionChoice.getId())) {
                         score.addAndGet(question.getPoints());
+                    }
 
                     MemberAnswer memberAnswer = ExamConverter.toMemberAnswer(question, questionChoice);
                     memberAnswer.setMemberExam(memberExam);
                     return memberAnswer;
-                }).collect(Collectors.toList());
+                }).toList();
 
         memberExam.setScore(score.intValue());
         memberAnswerRepository.saveAll(memberAnswerList);
